--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@lourenci/react-kanban": "^0.13.0",
     "@mdi/font": "^4.2.95",
     "@tinymce/tinymce-react": "^3.3.2",
+    "axios": "^0.27.2",
     "bootstrap": "^4.3.1",
     "bosket": "^0.2.3",
     "brace": "^0.11.1",
@@ -30,6 +31,7 @@
     "react-chartjs-2": "^2.8.0",
     "react-clipboard.js": "^2.0.16",
     "react-color": "^2.17.3",
+    "react-cookie": "^4.1.1",
     "react-datepicker": "^2.9.6",
     "react-dnd": "^9.4.0",
     "react-dnd-html5-backend": "^9.4.0",
@@ -52,6 +54,7 @@
     "react-svg-gauge": "^1.0.10",
     "react-table": "^6.10.3",
     "react-tag-autocomplete": "^5.11.1",
+    "react-toastify": "^9.0.5",
     "react-treebeard": "^3.2.4",
     "react-trello": "^2.2.3",
     "sass": "^1.52.3",
