--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@lourenci/react-kanban": "^0.13.0",
     "@mdi/font": "^4.2.95",
+    "@reduxjs/toolkit": "^1.8.3",
     "@tinymce/tinymce-react": "^3.3.2",
     "axios": "^0.27.2",
     "bootstrap": "^4.3.1",
@@ -45,6 +46,7 @@
     "react-input-mask": "^3.0.0-alpha.0",
     "react-jvectormap": "0.0.13",
     "react-quill": "^1.3.3",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-select": "^3.0.8",
