--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "typicons.font": "^2.0.9"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -87,6 +87,9 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
+  "devDependencies": {},
+  "engines": {
+    "npm": ">=8.0.0 <9.0.0",
+    "node": ">=12.0.0 <13.0.0"
   }
 }
